# sogon

./: .env.template  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  PERFORMANCE.md  README.md  README_ko.md  VALIDATION.md  main.py  pyproject.toml  ruff.toml
.github/: labeler.yml  release.yml
.github/workflows/: ci.yml  release.yml
claudedocs/: architecture_analysis_local_whisper.md  cleanup_analysis.md  transcription_provider_migration.md
groq_subtitle/: corrector.py  downloader.py  main_processor.py  transcriber.py  utils.py
mtt/: __init__.py  corrector.py  downloader.py  main_processor.py  transcriber.py  utils.py
sogon/: __init__.py  cli.py  corrector.py  downloader.py  exceptions.py  main_processor.py  transcriber.py  utils.py
sogon/api/: config.py  main.py
sogon/api/schemas/: __init__.py  requests.py  responses.py
sogon/config/: __init__.py  settings.py  user_config.py  validation.py
sogon/exceptions/: __init__.py  local_model.py
sogon/models/: __init__.py  job.py  local_config.py
sogon/providers/: __init__.py  base.py
sogon/providers/local/: __init__.py  faster_whisper_provider.py  stable_whisper_provider.py
sogon/queue/: __init__.py  factory.py  interface.py  memory_queue.py
sogon/repositories/: job_repository.py
sogon/services/: __init__.py  audio_service.py  correction_service.py  file_service.py  interfaces.py  transcription_service.py  translation_service.py  workflow_service.py
sogon/services/model_management/: __init__.py  device_selector.py  model_key.py  model_manager.py  resource_monitor.py
sogon/utils/: __init__.py  file_ops.py  provider_factory.py
sogon/workers/: __init__.py  job_worker.py
specs/001-/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-/contracts/: local_model_config_schema.py  transcription_provider_interface.py
tests/: test_api_config.py  test_api_main.py  test_integration.py  test_main_processor.py  test_transcriber.py
tests/contract/: __init__.py
tests/contract/models/: test_local_model_config_contract.py
tests/contract/providers/: __init__.py  test_transcription_provider_contract.py
tests/fixtures/: __init__.py  audio.py  configs.py
tests/integration/providers/: __init__.py  test_backward_compatibility.py  test_gpu_and_concurrency.py  (+1 more)
tests/unit/: test_cli_config.py  test_user_config.py
(+7 files in other folders)
